--- a/Data preprocessing.ipynb
+++ b/Data preprocessing.ipynb
@@ -68,7 +68,8 @@
    "id": "ea9c981a-9893-43a4-a5e3-8b40a50e018f",
    "metadata": {},
    "source": [
-    "On Duplicates\n",
+    "## On Duplicates\n",
+    "\n",
     "To identify plausible combinations of columns for duplicates, consider the logical relationships between columns and how duplicates might realistically occur. Here are some plausible combinations for checking duplicates in your dataset:\n",
     "\n",
     "1. Sales Order No. and Inventory Code: Each sales order should ideally have unique inventory codes. Duplicates here could indicate repeated entries for the same item in the same order.\n",
